--- a/README.me
+++ b/README.me
@@ -2,3 +2,6 @@ Esto es una practica de sistemas de control donde voy a explicar como hacer inte
 Git es un sistema de control de versiones distribuido, lo que significa que un clon local del proyecto es un repositorio de control de versiones completo
 Gitflow es un modelo alternativo de creación de ramas en Git en el que se utilizan ramas de función y varias ramas principales
 Tambien vamos a crear dos ramas nuevas para poder trabajar
+También vamos a utilizar el visual studio para el tema de codigo de html, crear la pagina web y mostrar los ejemplos de css, codigo html...
+
+
